spl2/hn_tests/failing/multiloc.hn
hnMain = {
	a = {
		b = 2
		incr b
	}
	print a
}